# lithos

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: LAYERS_FILE.md  PORTING_PLAN.md  REPAIR_ARCHITECTURE.md  REPAIR_PLAN.md  SVRF_PARSER_HANDOFF.md
pdks/sky130A/: bootstrap.yaml  metadata.yaml
scripts/: validate_sky130.py
